--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="static/app.css">
     <script src="static/app.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     {% if title %}
     <title>{{ title }} - microblog</title>
     {% else %}
@@ -12,16 +14,34 @@
     {% endif %}
 </head>
 <body>
-  <div>
-  FaizCan - MicroBlog:
-        <a href="{{ url_for('index') }}">Home</a>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{{ url_for('index') }}">FaizCan - MicroBlog:</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+  <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="float: right;">
+    <li class="nav-item">
+        <a class="nav-link active" href="{{ url_for('index') }}">Home</a>
+      </li>
       {% if current_user.is_anonymous %}
-        <a href="{{ url_for('login') }}">Login</a>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+      </li>
       {% else %}
-        <a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
-        <a href="{{ url_for('logout') }}">Logout</a>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('user', username=current_user.username) }}">Profile</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+      </li>
       {% endif %}
-  </div>
+      </ul>
+    </div>
+
+    </div>
+    </nav>
   <hr>
   {% with messages = get_flashed_messages() %}
   {% if messages %}
@@ -34,4 +54,5 @@
   {% endwith %}
   {% block content %}{% endblock %}
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
