--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+<div class="container">
     <h1>Login</h1>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
@@ -23,5 +23,5 @@
         <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
         <p> {{ form.submit() }} </p>
     </form>
-
+</div>
 {% endblock %}
